# discipline

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
net/: Cargo.toml
net/src/: lib.rs  main.rs  proto.rs  transform.rs
scripts/: discipline.service  discipline.sh  make_alert_sound.m
server/: Cargo.toml
server/src/: main.rs  valve.rs
ui/: Cargo.toml
ui/etc/: discipline.cfg
ui/src/: common.rs  main.rs  ptr.rs
