[package]
name = "tunnel"
version = "0.1.0"
authors = ["Berke Durak <bd@exhrd.fr>"]
edition = "2021"

[dependencies]
nix = { version = "0.27.1", features = ["socket","fs","net"] }
libc = { version = "0.2.60" }
pico-args = { version = "^0.5" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = { version = "^0.15" }