[package]
name = "discipline-net"
version = "0.1.0"
authors = ["Berke Durak <bd@exhrd.fr>"]
edition = "2021"

[dependencies.anyhow]
version = "1"

[dependencies.tungstenite]
version = "0.20"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.91"

[dependencies.i2cdev2]
version = "0.4.0"

[dependencies.pico-args]
version = "0.4.2"