[package]
name = "discipline-ui"
version = "0.1.0"
edition = "2021"

[dependencies.gtk4]
version = "0.7.2"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.ron]
version = "^0.8"

[dependencies.anyhow]
version = "1"

[dependencies.tokio-tungstenite]
version = "*"

[dependencies.tokio]
version = "*"
features = ["full"]

[dependencies.futures-util]
version = "0.3"

[dependencies.serde_json]
version = "1.0.91"

[dependencies.url]
version = "2.1.0"

[dependencies.pico-args]
version = "0.4.2"

[dependencies.time]
version = "0.3.30"
features = ["std","local-offset"]

[dependencies.discipline-net]
path = "../net"